[package]
name = "juniper_subscriptions"
version = "0.14.2"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
description = "Juniper SubscriptionCoordinator and SubscriptionConnection implementations"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"
edition = "2018"


[dependencies]
futures = "0.3.1"
juniper = { version = "0.14.2", path = "../juniper", default-features = false }
serde = { version = "1.0.8" }
serde_derive = { version = "1.0.2" }
serde_json = { version="1.0.2", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
