[package]
name = "juniper_subscriptions"
version = "0.14.2"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
description = "Juniper SubscriptionCoordinator and SubscriptionConnection implementations"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"
edition = "2018"

[features]
unstable-ws-subscriptions-transport = ["serde", "serde_json"]

[dependencies]
futures = "0.3"
juniper = { version = "0.14.2", path = "../juniper", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4.11" }
indicatif = "0.14.0"
dialoguer = "0.5.0"

[[example]]
name="ws_subscription"
required-features=["unstable-ws-subscriptions-transport"]
